# brainvisa-share

./: CMakeLists.txt  README  README.md  brainvisa-share.bcg  database_settings.minf  fast_brainvisa-share_copy.py  project_info.cmake  share.bcg
anatomical_templates/: MNI152_T1_1mm.nii.gz.minf  MNI152_T1_1mm_brain.nii.minf  MNI152_T1_1mm_brain_mask.nii.minf  MNI152_T1_2mm.nii.gz.minf  MNI152_T1_2mm_brain.nii.minf  MNI152_T1_2mm_brain_mask.nii.minf  MNI152_T1_3mm_brain_mask.nii  mni_icbm152_nlin_asym_09c.nii.gz.minf
cmake/: brainvisa-share-config.cmake.in  share-config.cmake.in
config/: config.h.in  config.py.in
fMRI/: spm_current_defaults.xml
hemitemplate/: RawT1-Template_TO_Talairach-ACPC.trm  RawT1-Template_TO_Talairach-ACPC.trm.minf  Template_Cingular.nii.gz.minf  Template_icbmPoleLeft.dim  Template_icbmPoleLeft.ima.minf  Template_icbmPoleRight.ima.minf  closedvoronoi.dim  template_TO_Talairach-ACPC.trm.minf
models/3.0/Lfolds_noroots_171201/: Lfolds_model_noroots_2001.arg  README.txt  base.txt  domLearner.lrn  learner.lrn  siDom.cfg  siLearn.cfg  siLearnTempl.cfg  siMkModelEdges.cfg  siStats.cfg  statsLearner-withoutBad.lrn
models/3.0/Rfolds_noroots_020200/: base.txt  cliques.ps  siLearn.cfg  siLearnNodes.cfg  siLearnTempl.cfg  siMkModelEdges.cfg  siStats.cfg  siStatsEdges.cfg  siStatsPart.cfg
models/3.0/gyrus/: gyrusModel.arg  (+1 more)
models/model_templates/: fakerel.mod  gauss2.mod  gauss4.mod  learner-1_5_2_2.lrn.minf  learner-good_only-1_0_0_0.lrn  learner-good_only-1_0_0_0.lrn.minf  learner-memorizer-1_5_2_2.lrn  learner-memorizer-1_5_2_2.lrn.minf
nomenclature/hierarchy/: FCM_MNI_drawing.hie  WM_bundles.hie  demo1-nucleus.hie  demo1-nucleus.hie.minf  geodesic_scale_space.hie  gyri.hie  lateral_neuronames.hie  neuronames.hie  nucleus.hie  nucleus_gwen.hie  pipeline_masks.hie  rat_wb.hie  stereotaxy.hie  sulcal_root_colors.hie  sulcal_root_colors.hie.minf  sulcal_root_colorscorrected_molko.hie  sulcus_epidaure.hie
nomenclature/surfaceanalysis/: constraint_correspondance.txt  constraint_correspondance_2011.txt  surfaceRefModel_mer.gyr  surfaceRefModel_par.gyr  surfaceReferential.trl
nomenclature/syntax/: adap.stx  anatomist_attributes.stx  domain.stx  fold.stx  graph.stx  graphschema.sql  hierarchy.stx
nomenclature/translation/: gyri.trl  nucleus_substitutions.txt  sulci_default_list.json  sulci_group.json  sulci_model_2008.trl  sulci_model_2008.trl.minf  sulci_model_2018.trl  translation_epidaure.trl
registration/: RawT1-icbm105T.referential  Stereotaxy_Leksell.referential  Talairach-AC_PC-Anatomist.referential  Talairach-MNI_FSL4_1mm_T1_template-aims_oriented.referential  Talairach-MNI_SPM5_T1_template-aims_oriented.referential  Talairach-MNI_template-SPM.referential  Talairach-MNI_template-aims_oriented.referential  globally_registred_spam.referential  mni_icbm152_nlin_asym_09c.referential
standardmeshes/: cross.mesh  ic0.gii  ic1.gii  ic2.gii  ic3.gii  ic4.gii  ic5.gii  ic6.gii  ic7.gii  ico100_7.gii
surfaceBased/coordinateGrid/: contraintes.txt  regular.txt
talairach/: grid.mesh
tms_template/: tms_coil.mesh  tms_pointer.mesh
transformation/: fsl4_1mm_T1_template_TO_spm_template_novoxels.trm  fsl4_1mm_T1_template_TO_spm_template_novoxels.trm.minf  spm5_T1_template_TO_spm_template_novoxels.trm  spm5_T1_template_TO_spm_template_novoxels.trm.minf  spm_template_TO_mni_icbm152_nlin_asym_09c.trm  spm_template_TO_mni_icbm152_nlin_asym_09c.trm.minf  spm_template_TO_spm_template_novoxels.trm  spm_template_TO_spm_template_novoxels.trm.minf  talairach_TO_spm_template.trm  talairach_TO_spm_template.trm.minf  talairach_TO_spm_template_novoxels.trm  talairach_TO_spm_template_novoxels.trm.minf
(+7070 files in other folders)
